--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
-.App {
-  text-align: center;
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  min-height: calc(100vh - 125px);
+  padding-bottom: 30px;
 }
 
 .App-logo {
