--- a/src/components/style.css
+++ b/src/components/style.css
@@ -11,6 +11,13 @@ a {
   font-weight: 300;
   margin-bottom: 20px;
 }
+.home__filters {
+  width: 70%;
+  margin: auto;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+}
 .home__container {
   display: grid;
   margin: 0 auto;
@@ -42,7 +49,7 @@ a {
   width: 70%;
 }
 .cart__container > div {
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 .cart__empty {
   margin-top: 80px;
@@ -77,4 +84,78 @@ a {
 .thank-you {
   padding-top: 80px;
   text-align: center;
+}
+.detail__container {
+  width: 70%;
+  margin: auto;
+  margin-top: 70px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.detail__img img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.detail__info {
+  max-width: 30%;
+}
+.detail .radio-group {
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+.detail input[type="radio"] {
+  position: absolute;
+  display: hidden;
+  visibility: hidden;
+}
+.detail label {
+  border-radius: 50%;
+  padding: 10px;
+  color: #000;
+  background-color: #fff;
+  border: 1px #adadad solid;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.detail label:hover {
+  border: 1px #000 solid;
+}
+.detail input[type="radio"]:checked + label {
+  color: #fff;
+  background-color: #000;
+}
+.detail #size-error {
+  position: relative;
+  top: 20px;
+  color: #f44336;
+}
+@media (max-width: 998px) {
+  .detail__container {
+    flex-direction: column;
+  }
+  .detail__info {
+    max-width: 100%;
+  }
+}
+.checkout__container {
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+  margin: 50px auto;
+}
+.checkout__form {
+  margin-bottom: 30px;
+}
+.checkout__form,
+.checkout__cart {
+  max-width: 50%;
+}
+@media (max-width: 998px) {
+  .checkout__container {
+    flex-direction: column;
+  }
+  .checkout__form,
+  .checkout__cart {
+    max-width: 100%;
+  }
 }
