--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -15,6 +15,14 @@ a {
     margin-bottom: 20px;
   }
 
+  &__filters {
+    width: 70%;
+    margin: auto;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+  }
+
   &__container {
     display: grid;
     margin: 0 auto;
@@ -51,7 +59,7 @@ a {
     width: 70%;
 
     & > div {
-      margin-bottom: 30px;
+      margin-bottom: 50px;
     }
   }
 
@@ -98,4 +106,102 @@ a {
 .thank-you {
   padding-top: 80px;
   text-align: center;
+}
+
+//Detail
+.detail {
+  &__container {
+    width: 70%;
+    margin: auto;
+    margin-top: 70px;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  &__img {
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
+
+  &__info {
+    max-width: 30%;
+  }
+
+  .radio-group {
+    margin-top: 10px;
+    margin-bottom: 40px;
+  }
+
+  input[type="radio"] {
+    position: absolute;
+    display: hidden;
+    visibility: hidden;
+  }
+
+  label {
+    border-radius: 50%;
+    padding: 10px;
+    color: #000;
+    background-color: #fff;
+    border: 1px rgb(173, 173, 173) solid;
+    margin-right: 10px;
+    cursor: pointer;
+
+    &:hover {
+      border: 1px #000 solid;
+    }
+  }
+
+  input[type="radio"]:checked + label {
+    color: #fff;
+    background-color: #000;
+  }
+
+  #size-error {
+    position: relative;
+    top: 20px;
+    color: #f44336;
+  }
+
+  @media (max-width: 998px) {
+    &__container {
+      flex-direction: column;
+    }
+
+    &__info {
+      max-width: 100%;
+    }
+  }
+}
+
+//Checkout
+.checkout {
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    width: 70%;
+    margin: 50px auto;
+  }
+
+  &__form {
+    margin-bottom: 30px;
+  }
+
+  &__form,
+  &__cart {
+    max-width: 50%;
+  }
+
+  @media (max-width: 998px) {
+    &__container {
+      flex-direction: column;
+    }
+
+    &__form,
+    &__cart {
+      max-width: 100%;
+    }
+  }
 }
