--- a/src/components/style.css
+++ b/src/components/style.css
@@ -147,15 +147,21 @@ a {
   margin-bottom: 30px;
 }
 .checkout__form,
-.checkout__cart {
+.checkout__info {
   max-width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.checkout__cart,
+.checkout__summary {
+  margin-bottom: 50px;
 }
 @media (max-width: 998px) {
   .checkout__container {
     flex-direction: column;
   }
   .checkout__form,
-  .checkout__cart {
+  .checkout__info {
     max-width: 100%;
   }
 }
